# Billy-G-Sound-Garden

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  spectrogram_viz.spec
.github/workflows/: build-installers.yml
assets/: guitar.icns
installer/: installer.iss
src/spectrogram_viz/: __main__.py  cli.py  config.py  errors.py
src/spectrogram_viz/audio/: __init__.py  devices.py  ring_buffer.py  stream.py
src/spectrogram_viz/dsp/: __init__.py  fft.py  peaks.py  scaling.py  windows.py
src/spectrogram_viz/ui/: __init__.py  app.py  icons.py  spectrum_view.py  splash.py
tools/: make_icon.py
