[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectrogram_viz"
version = "0.1.0"
description = "Real-time FFT spectrum / spectrogram visualizer"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "sounddevice>=0.4.6",
    "PyQt6>=6.6",
    "pyqtgraph>=0.13",
]

[project.scripts]
spectrogram-viz = "spectrogram_viz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spectrogram_viz = ["../../assets/*"]
